# Matrix

./: .gitignore  CMakeLists.txt  README.md  generateTestcases.py
benchmark/: CMakeLists.txt  benchmark.cmake  generateNumbers.py  main.cpp  main_O3.cpp  main_SSE.cpp  runBenchMark.sh
lib/: IntMatrix.h  IntMatrix.hpp  intMatrix.cpp  matrix.h  matrix.hpp
scripts/: build.sh  build_arm64.sh  build_x86.sh  runBenchMark.sh
src/: main.cpp
tests/: test.cpp
